# Ardaemon

./: .gitignore  ui.py
client/: LICENSE  README.md  client.py  setup.py  ui.py  ui_mockup.txt  ui_new.py
client/arclient/: __init__.py  gui.py
daemon/: Arduino.hs  Commands.hs  LICENSE  Main.hs  Makefile  README.md  ardaemon.cabal
daemon/test/: json_commands.txt
regulator/: regulator.m  regulator.py
tex/: 01-title.tex  02-introduction.tex  02-toc.tex  03-introduction.tex  04-tech-overview.tex  05-implementation.tex  06-conclusion.tex  07-abstract.tex  08-cv.tex  09-appendix.tex  Makefile  TODO  bibliography.bib  main.tex  regulator_response.csv
tex/presentation/: Makefile  slides.tex
ui/: ui_new.py
