name:                ardaemon
version:             0.1
license:             ISC
license-file:        LICENSE
author:              Damir Jelić
maintainer:          poljar@termina.org.uk
build-type:          Simple
cabal-version:       >=1.10

executable ardaemon
  main-is:             Main.hs
  other-modules:       Commands
  other-extensions:    OverloadedStrings, RecordWildCards, DeriveDataTypeable
  build-depends:       base >=4.7 && < 4.9, json-rpc-server >=0.1, mtl >=2.1, network >=2.6, cmdargs >=0.10, directory >=1.2, bytestring >=0.10,serialport >= 0.4.7, hArduino >= 0.9
  default-language:    Haskell2010
